objects/Veda_personal_Insolvency__c.object
<CustomObject>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda personal Insolvencys</relationshipLabel>
        <relationshipName>Veda_personal_Insolvencys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>administration_Id_District__c</fullName>
        <label>administrationIdDistrict</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>administration_Id_Number__c</fullName>
        <label>administrationIdNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>administration_Id_Proceedings_Status__c</fullName>
        <label>administrationIdProceedingsStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>administration_Id_Year__c</fullName>
        <label>administrationIdYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>co_Borrower__c</fullName>
        <label>coBorrower</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Declared__c</fullName>
        <label>dateDeclared</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship_Code__c</fullName>
        <label>relationshipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship__c</fullName>
        <label>relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_Code__c</fullName>
        <label>statusCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_Date__c</fullName>
        <label>statusDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type_Code__c</fullName>
        <label>typeCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda personal Insolvency</label>
    <nameField>
        <label>personal Insolvency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda personal Insolvencys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>